--- a/src/components/styles/Movie.module.css
+++ b/src/components/styles/Movie.module.css
@@ -1,6 +1,7 @@
 .movie {
   justify-self: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   flex-direction: column;
 }
