individual movie styling

--- a/src/components/styles/Movies.module.css
+++ b/src/components/styles/Movies.module.css
@@ -1,5 +1,6 @@
 .movies {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   justify-content: center;
+  grid-gap: 16px;
 }
