--- a/src/components/styles/Movie.module.css
+++ b/src/components/styles/Movie.module.css
@@ -4,4 +4,9 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  border: 1px solid #fff;
+  padding: 1em;
+  min-width: 333px;
+  max-width: 333px;
+  box-shadow: inner 10px 10px 10px #e3e3e3;
 }
