--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -1,4 +1,4 @@
-.MuiButton-contained.Mui-disabled {
+button[type=submit].Mui-disabled {
   background-color: #959595 !important;
   color: #000 !important;
   transition: background-color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 5000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
