--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,10 @@ input,
 label {
   color: white !important;
 }
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
